fixed price alignment

--- a/front/src/style.css
+++ b/front/src/style.css
@@ -32,9 +32,9 @@ body > div {
 
 .featured-panel {
 	display: block;
-	overflow: hidden;
 	grid-row: 1 / 3;
 	position: relative;
+	overflow: hidden;
 }
 
 @media (max-aspect-ratio: 1/1) {
@@ -79,15 +79,14 @@ body > div {
 	font-family: 'Luckiest Guy', sans-serif;
 	position: absolute;
 	bottom: 0;
-	left: 0;
-	right: 0;
+	left: -100px;
+	right: -100px;
 	height: 64px;
 	text-align: center;
 	color: #ffffff;
 	padding: 6px;
 	background-color: rgba(0, 0, 0, 0.2);
 	white-space: nowrap;
-	overflow: hidden;
 }
 
 .featured-item .title {
@@ -109,17 +108,24 @@ body > div {
 	display: inline-block;
 	width: 32px;
 	height: 32px;
+	margin-right: 6px;
 	background-image: url("/vbucks.png");
 	background-repeat: no-repeat;
 	background-size: cover;
+	vertical-align: middle;
+}
+
+.price-text {
+	vertical-align: middle;
+	display: inline-block;
 }
 
 .featured-item .price, .daily-item .price {
 	font-family: 'Luckiest Guy', sans-serif;
 	position: absolute;
 	bottom: 0;
-	left: 0;
-	right: 0;
+	left: 0px;
+	right: 0px;
 	height: 32px;
 	text-align: center;
 	color: #ffffff;
@@ -200,6 +206,7 @@ h1 {
 	top: 0;
 	bottom: 0;
 	right: 0;
+	overflow: hidden;
 }
 
 .c-active {
